[package]
name = "serial_enumerator"
version = "0.2.0"
edition = "2018"
license = "MIT"
authors = ["Ma Xiaoqing <rede1997@outlook.com>"]
description = "A serial port enumreator library writen in rust, which can help you to get serial ports and informations of you devices."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
cli-table = "0.4.6"

[target.'cfg(windows)'.dependencies.windows]
version = "0.29.0"
features = [
    "std",
    "alloc",
    "Win32_Foundation",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Registry",
]

[[bin]]
name = "lser"
path = "src/bin/lser.rs"