[package]
name = "serial_enumerator"
version = "0.2.2"
edition = "2018"
license = "MIT"
authors = ["Xiaoqing Ma <rede1997@outlook.com>"]
description = "A serial port enumreator library writen"
homepage = "https://github.com/rede97/serial_enumerator"
repository = "https://github.com/rede97/serial_enumerator"
include = ["Cargo.toml", "src/**/*.rs", "README.md"]
keywords = ["serial", "tty", "UART"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "serial_enumerator"
path = "src/lib.rs"

[dependencies]
nom = "7.1.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.29.0"
features = [
    "std",
    "alloc",
    "Win32_Foundation",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Registry",
]
