[package]
name = "serial_enumerator"
version = "0.2.5"
edition = "2018"
license = "MIT"
authors = ["Xiaoqing Ma <rede1997@outlook.com>"]
description = "A serial port enumreator library writen in rust"
homepage = "https://github.com/rede97/serial_enumerator"
repository = "https://github.com/rede97/serial_enumerator"
include = ["Cargo.toml", "src/**/*.rs", "README.md"]
keywords = ["serial", "tty", "UART"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "serial_enumerator"
path = "src/lib.rs"

[dependencies]
nom = "7.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
IOKit-sys = "0.1.5"
libc = "0.2"
mach = "0.1.1"
CoreFoundation-sys = "0.1.4"
defer-lite = "1.0.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.29.0"
features = [
    "std",
    "alloc",
    "Win32_Foundation",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Registry",
]

[[bin]]
name = "lser"
path = "src/bin/lser.rs"
test = false
